Add 'Both Organizations' option and update one-time donation link

--- a/static/index.html
+++ b/static/index.html
@@ -114,7 +114,7 @@
       <p class="subtitle">Make Your Blessed Donation</p>
       
       <div class="info-box">
-        <p><strong>For one-time donations please visit this link:</strong> <a href="#" id="one-time-link" style="color: #667eea; text-decoration: underline;">Coming soon</a></p>
+        <p><strong>For one-time donations please visit this link:</strong> <a href="https://www.zeffy.com/en-US/peer-to-peer/muslim-dreamers-2026-fundraiser?donate=true" target="_blank" id="one-time-link" style="color: #667eea; text-decoration: underline;">Donate Now</a></p>
       </div>
 
       <div class="info-box">
@@ -139,6 +139,7 @@
         <select id="organization" name="organization" required>
           <option value="aminah">Aminah Islamic Center</option>
           <option value="dreamers">Muslim Dreamers Learning Center</option>
+          <option value="both">Both Organizations</option>
         </select>
 
         <label for="donation-type">Donation Type</label>
