Add WhatsApp contact link for tax receipts

--- a/static/index.html
+++ b/static/index.html
@@ -118,7 +118,7 @@
       </div>
 
       <div class="info-box">
-        <p><strong>Tax Deductible:</strong> All donations are tax-deductible. Please contact us on WhatsApp with your donation receipt/confirmation to receive an official tax receipt.</p>
+        <p><strong>Tax Deductible:</strong> All donations are tax-deductible. Please <a href="https://wa.me/14434163575" target="_blank" style="color: #667eea; text-decoration: underline;">contact us on WhatsApp</a> with your donation receipt/confirmation to receive an official tax receipt.</p>
       </div>
 
       <div class="unit-info">
